# klavaro-lexoclubmod

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  NOTES.md  README  README.myfork.md  TODO  aclocal.m4  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  azerty_fr_afnor.kbd  bg.paragraphs  bg.words  bo.paragraphs  bo.words  da.paragraphs  da.words  dvorak_de_adnw.kbd  dvorak_de_bone.kbd  dvorak_us_left.kbd  dvorak_us_rigth.kbd  extract_notallowed_klavaro.py  fi.paragraphs  fr.paragraphs  hi.paragraphs  hi.words  hindi_in_kruti.kbd  hr.paragraphs  id.paragraphs  id.words  kk.paragraphs  klavaro.appdata.xml.in  klavaro.desktop.in  klavaro.glade  nl.paragraphs  nl.words  norman_us.kbd  pa.paragraphs  preferences_darkmode.ini  pt.paragraphs  pt.words  pt_BR.paragraphs  pt_BR.words  pt_PT.paragraphs  qwerty_bo.kbd  qwertz_de.kbd  qwertz_sk_2.kbd  ru.paragraphs  (+5 more)
data/icons/: Makefile.in
data/icons/hicolor/: Makefile.in
data/icons/hicolor/16x16/: Makefile.in
data/icons/hicolor/16x16/apps/: Makefile.in
data/icons/hicolor/22x22/: Makefile.in
data/icons/hicolor/22x22/apps/: Makefile.in
data/icons/hicolor/24x24/: Makefile.in
data/icons/hicolor/24x24/apps/: Makefile.in
data/icons/hicolor/32x32/: Makefile.in
data/icons/hicolor/32x32/apps/: Makefile.in
data/icons/hicolor/48x48/: Makefile.in
data/icons/hicolor/48x48/apps/: Makefile.in
data/icons/hicolor/64x64/: Makefile.in
data/icons/hicolor/64x64/apps/: Makefile.in
data/icons/hicolor/96x96/: Makefile.in
data/icons/hicolor/96x96/apps/: Makefile.in
doc/: Makefile.in  klavaro.1
gtkdatabox/: Makefile.am  Makefile.in  gtkdatabox.c  gtkdatabox.h  gtkdatabox_graph.c  gtkdatabox_grid.c  gtkdatabox_marshal.c  gtkdatabox_marshal.h  gtkdatabox_points.c  gtkdatabox_ruler.c  gtkdatabox_xyc_graph.c
po/: ChangeLog  LINGUAS  Makefile.in.in  ar.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  kk.po  ko.po  ky.po  nb.po  nl.po  pa.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  te.po  tr.po  uk.po  (+4 more)
src/: Makefile.am  Makefile.in  accuracy.c  accuracy.h  adaptability.c  adaptability.h  auxiliar.c  auxiliar.h  basic.c  basic.h  callbacks.c  callbacks.h  cursor.c  cursor.h  fluidness.c  fluidness.h  headache.txt  keyboard.c  keyboard.h  main.c  main.h  plot.c  plot.h  top10.c  top10.h  translation.c  translation.h  tutor.c  tutor.h  velocity.c  velocity.h
